Fixed dark mode

--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -2,7 +2,7 @@
   border-radius: 10px;
 }
 
-$color-white: #ffffff;
+$color-white: revert;
 $color-black: #000000;
 $color-box-shadow: #65a797;
 $color-mint: #75BDAD;
